# LaserScanDetector

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
msg/: ObjectDetection.msg
src/: LaserScanDetector.cpp  LaserScanDetector.h  main.cpp
src/Utils/: Timestamp.h
