<?xml version="1.0"?>
<package>
	<name>LaserScanDetector</name>
	<version>0.0.0</version>
	<description>The LaserScanDetector package</description>
	<maintainer email="previtali@dis.uniroma1.it">Fabio Previtali</maintainer>
	<license>LGPL v. 3.0</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>message_generation</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>message_runtime</run_depend>
</package>
